# BMDownloader

./: .gitignore  Cargo.toml  README.md  mac_export.md  windows_export.md
examples/node.js/: downloader.cjs  package-lock.json  package.json  test.js  test_2.js  windows_instalations.md
examples/win64-electron-downloader/: webpack.main.config.js
examples/win64-electron-downloader/src/: App.js  cdownloader.js  downloader.js  test.js
node.js/: downloader.js  package-lock.json  package.json
src/: global.rs  lib.rs  test.rs
src/components/: README.md  downloader.rs  mod.rs
src/controllers/: downloader.rs  mod.rs  schedules.rs  settings.rs  test.rs
src/db/: README.md  db_connection.rs  db_crud.rs  db_models.rs  mod.rs
src/export/: bindings.rs  mod.rs
src/services/: downloader.rs  mod.rs  test.rs
win64-electron-downloader/: package-lock.json  package.json  preload.js  webpack.renderer.config.js
win64-electron-downloader/public/: main.js
win64-electron-downloader/src/: index.html  test_2.js
