[package]
name = "bmdownloader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.12.8", features = ["blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = {version = "0.3.31"}
rusqlite = "0.32.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono ={version = "0.4.38",features=["serde"]}

[profile.test]
test = { parallel = false }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true 