[package]
name = "bmdownloader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = { version = "0.12.8", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = {version = "0.3.31"}
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono ={version = "0.4.38",features=["serde"]}
directories = "5.0.1"
[profile.test]
test = { parallel = false }

[profile.release]
opt-level = 'z'    
lto = true          
codegen-units = 1   
panic = 'abort'  
strip = true 
link-dead-code = true